--- a/idf/cubiculo_original/DosPersonas/c001/c001Table.html
+++ b/idf/cubiculo_original/DosPersonas/c001/c001Table.html
@@ -3,26 +3,26 @@
 <head>
 <title> Building 1 RUN PERIOD 1 ** Temixco Morelos MEX repo https://gi WMO#=-
   2021-12-08
-  17:50:35
+  22:33:14
  - EnergyPlus</title>
 </head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <body>
 <p><a href="#toc" style="float: right">Table of Contents</a></p>
 <a name=top></a>
-<p>Program Version:<b>EnergyPlus, Version 9.5.0-de239b2e5f, YMD=2021.12.08 17:50</b></p>
+<p>Program Version:<b>EnergyPlus, Version 9.5.0-de239b2e5f, YMD=2021.12.08 22:33</b></p>
 <p>Tabular Output Report in Format: <b>HTML</b></p>
 <p>Building: <b>Building 1</b></p>
 <p>Environment: <b>RUN PERIOD 1 ** Temixco Morelos MEX repo https://gi WMO#=-</b></p>
 <p>Simulation Timestamp: <b>2021-12-08
-  17:50:35</b></p>
+  22:33:14</b></p>
 <hr>
 <p><a href="#toc" style="float: right">Table of Contents</a></p>
 <a name=AnnualBuildingUtilityPerformanceSummary::EntireFacility></a>
 <p>Report:<b> Annual Building Utility Performance Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Values gathered over      1296.00 hours</b><br><br>
 <b>WARNING: THE REPORT DOES NOT REPRESENT A FULL ANNUAL SIMULATION.</b><br><br>
 <b></b><br><br>
@@ -1116,7 +1116,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Input Verification and Results Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>General</b><br><br>
 <!-- FullName:Input Verification and Results Summary_Entire Facility_General-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -1125,7 +1125,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
   </tr>
   <tr>
     <td align="right">Program Version and Build</td>
-    <td align="right">EnergyPlus, Version 9.5.0-de239b2e5f, YMD=2021.12.08 17:50</td>
+    <td align="right">EnergyPlus, Version 9.5.0-de239b2e5f, YMD=2021.12.08 22:33</td>
   </tr>
   <tr>
     <td align="right">RunPeriod</td>
@@ -1466,7 +1466,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Demand End Use Components Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>End Uses</b><br><br>
 <!-- FullName:Demand End Use Components Summary_Entire Facility_End Uses-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -2024,7 +2024,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Source Energy End Use Components Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Values gathered over      1296.00 hours</b><br><br>
 <b>WARNING: THE REPORT DOES NOT REPRESENT A FULL ANNUAL SIMULATION.</b><br><br>
 <b></b><br><br>
@@ -2812,14 +2812,14 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Component Sizing Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <hr>
 <p><a href="#toc" style="float: right">Table of Contents</a></p>
 <a name=SurfaceShadowingSummary::EntireFacility></a>
 <p>Report:<b> Surface Shadowing Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Surfaces (Walls, Roofs, etc) that may be Shadowed by Other Surfaces</b><br><br>
 <!-- FullName:Surface Shadowing Summary_Entire Facility_Surfaces (Walls, Roofs, etc) that may be Shadowed by Other Surfaces-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -3002,7 +3002,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Adaptive Comfort Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Time Not Meeting the Adaptive Comfort Models during Occupied Hours</b><br><br>
 <!-- FullName:Adaptive Comfort Summary_Entire Facility_Time Not Meeting the Adaptive Comfort Models during Occupied Hours-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -3021,7 +3021,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Initialization Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Version</b><br><br>
 <!-- FullName:Initialization Summary_Entire Facility_Version-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -3998,6 +3998,17 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
     <td align="right">Carbon Dioxide Generation Rate</td>
     <td align="right">Nominal Minimum Number of People</td>
     <td align="right">Nominal Maximum Number of People</td>
+    <td align="right">MRT Calculation Type</td>
+    <td align="right">Work Efficiency</td>
+    <td align="right">Clothing Insulation Calculation Method</td>
+    <td align="right">Clothing Insulation Calculation Method Schedule</td>
+    <td align="right">Clothing</td>
+    <td align="right">Air Velocity</td>
+    <td align="right">Fanger Calculation</td>
+    <td align="right">Pierce Calculation</td>
+    <td align="right">KSU Calculation</td>
+    <td align="right">Cooling Effect Calculation</td>
+    <td align="right">Ankle Draft Calculation</td>
   </tr>
   <tr>
     <td align="right">1</td>
@@ -4017,6 +4028,17 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
     <td align="right">3.8200E-008</td>
     <td align="right">0</td>
     <td align="right">2</td>
+    <td align="right">Zone Averaged</td>
+    <td align="right">WORKINGPERSON</td>
+    <td align="right">Clothing Insulation Schedule</td>
+    <td align="right">N/A</td>
+    <td align="right">WEARING</td>
+    <td align="right">VELOCIDAD</td>
+    <td align="right">Yes</td>
+    <td align="right">No</td>
+    <td align="right">No</td>
+    <td align="right">No</td>
+    <td align="right">No</td>
   </tr>
   <tr>
     <td align="right">2</td>
@@ -4036,6 +4058,17 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
     <td align="right">3.8200E-008</td>
     <td align="right">0</td>
     <td align="right">1</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
   </tr>
   <tr>
     <td align="right">3</td>
@@ -4055,6 +4088,17 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
     <td align="right">3.8200E-008</td>
     <td align="right">0</td>
     <td align="right">2</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
   </tr>
 </table>
 <br><br>
@@ -4755,7 +4799,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Annual Heat Emissions Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Heat Emission by Components</b><br><br>
 <!-- FullName:Annual Heat Emissions Summary_Entire Facility_Heat Emission by Components-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -4784,7 +4828,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Climatic Data Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>SizingPeriod:DesignDay</b><br><br>
 <!-- FullName:Climatic Data Summary_Entire Facility_SizingPeriod:DesignDay-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -4905,7 +4949,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Envelope Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Opaque Exterior</b><br><br>
 <!-- FullName:Envelope Summary_Entire Facility_Opaque Exterior-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -5950,7 +5994,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Shading Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Sunlit Fraction</b><br><br>
 <!-- FullName:Shading Summary_Entire Facility_Sunlit Fraction-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -6209,7 +6253,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Lighting Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Interior Lighting</b><br><br>
 <!-- FullName:Lighting Summary_Entire Facility_Interior Lighting-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -6298,7 +6342,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Equipment Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Central Plant</b><br><br>
 <!-- FullName:Equipment Summary_Entire Facility_Central Plant-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -6523,7 +6567,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> HVAC Sizing Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Zone Sensible Cooling</b><br><br>
 <!-- FullName:HVAC Sizing Summary_Entire Facility_Zone Sensible Cooling-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -6736,7 +6780,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Coil Sizing Details</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Coils</b><br><br>
 <!-- FullName:Coil Sizing Details_Entire Facility_Coils-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -6925,7 +6969,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> System Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Economizer</b><br><br>
 <!-- FullName:System Summary_Entire Facility_Economizer-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -7100,7 +7144,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Outdoor Air Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Average Outdoor Air During Occupied Hours</b><br><br>
 <!-- FullName:Outdoor Air Summary_Entire Facility_Average Outdoor Air During Occupied Hours-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -7157,7 +7201,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Outdoor Air Details</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Mechanical Ventilation Parameters by Zone</b><br><br>
 <!-- FullName:Outdoor Air Details_Entire Facility_Mechanical Ventilation Parameters by Zone-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -7356,7 +7400,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Object Count Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Surfaces by Class</b><br><br>
 <!-- FullName:Object Count Summary_Entire Facility_Surfaces by Class-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -7472,15 +7516,15 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
   </tr>
   <tr>
     <td align="right">IDF Objects</td>
-    <td align="right">         173</td>
+    <td align="right">         182</td>
   </tr>
   <tr>
     <td align="right">Defaulted Fields</td>
-    <td align="right">         354</td>
+    <td align="right">         355</td>
   </tr>
   <tr>
     <td align="right">Fields with Defaults</td>
-    <td align="right">         853</td>
+    <td align="right">         860</td>
   </tr>
   <tr>
     <td align="right">Autosized Fields</td>
@@ -7506,7 +7550,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Energy Meters</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Annual and Peak Values - Electricity</b><br><br>
 <!-- FullName:Energy Meters_Entire Facility_Annual and Peak Values - Electricity-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -8033,7 +8077,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Sensible Heat Gain Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Annual Building Sensible Heat Gain Components</b><br><br>
 <!-- FullName:Sensible Heat Gain Summary_Entire Facility_Annual Building Sensible Heat Gain Components-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -8572,7 +8616,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> LEED Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Sec1.1A-General Information</b><br><br>
 <!-- FullName:LEED Summary_Entire Facility_Sec1.1A-General Information-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -9344,7 +9388,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Annual Thermal Resilience Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Heat Index Hours</b><br><br>
 <!-- FullName:Annual Thermal Resilience Summary_Entire Facility_Heat Index Hours-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -9755,7 +9799,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Annual CO2 Resilience Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>CO2 Level Hours</b><br><br>
 <!-- FullName:Annual CO2 Resilience Summary_Entire Facility_CO2 Level Hours-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -9794,7 +9838,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Annual Visual Resilience Summary</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Illuminance Level Hours</b><br><br>
 <!-- FullName:Annual Visual Resilience Summary_Entire Facility_Illuminance Level Hours-->
 <table border="1" cellpadding="4" cellspacing="0">
@@ -9837,7 +9881,7 @@ Note 1: An asterisk (*) indicates that the feature is not yet implemented.<br>
 <p>Report:<b> Life-Cycle Cost Report</b></p>
 <p>For:<b> Entire Facility</b></p>
 <p>Timestamp: <b>2021-12-08
-    17:50:35</b></p>
+    22:33:14</b></p>
 <b>Life-Cycle Cost Parameters</b><br><br>
 <!-- FullName:Life-Cycle Cost Report_Entire Facility_Life-Cycle Cost Parameters-->
 <table border="1" cellpadding="4" cellspacing="0">
